--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,5 +56,12 @@ services:
         DYNAMIC_CONFIG_ENABLED: true
 
 
+  redis:
+    image: redis:7.0.5-alpine
+    hostname: redis
+    ports:
+      - "6379:6379"
+
+
 volumes:
   mongo_data:
